--- a/functions/requirements.txt
+++ b/functions/requirements.txt
@@ -1,6 +1,6 @@
+# Cloud Functions Dependencies for CivicConnect
+# Gen 2 Cloud Functions with Gemini AI
 
-firebase-functions>=0.1.0
-firebase-admin>=6.0.0
-google-cloud-aiplatform>=1.38.0
-vertexai>=1.0.0
-python-dateutil>=2.8.2
+firebase-functions>=0.4.0
+google-genai>=1.0.0
+flask>=2.0.0
